fix: removed the scrollbar-width property from the .hide-scrollbar class as the CSS validator declared it an error as it doesn't exist as a property.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body.hide-scrollbar::-webkit-scrollbar {
 
 body.hide-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */  
+    /* scrollbar-width: none;  /* Firefox */   */
 }
 
 /*----------------------------------Colours*/
